# Modelscarp_Inversion

./: Format_your_data.xls  README.docx  README.md
Modelscarp_Inversion/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac  forward_model.mod  function_module.mod  integral_module.mod  rf_types.mod  utilities.mod
Modelscarp_Inversion/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
Modelscarp_Inversion/data/: coll.txt  data.txt  sf.txt
Modelscarp_Inversion/modelscarp_param/: param_site.in
Modelscarp_Inversion/modelscarp_param/LSD_const/: Aln2nAl26.in  AlnxNe21.in  AlppnAl26.in  AlpxHe3T.in  AlpxNe21.in  CanapCl36.in  CanxHe3T.in  CapxCl36.in  CapxHe3T.in  FenxCl36.in  FenxHe3T.in  FepxCl36.in  FepxHe3T.in  KnxCl36.in  KpxCl36.in  M.in  MM0_KCL.in  M_old.in  MgnxHe3T.in  MgnxNe21.in  MgpxHe3T.in  MgpxNe21.in  O16nn2pC14.in  O16nxBe10.in  O16pxBe10.in  O16pxC14.in  OnxHe3T.in  OpxHe3T.in  S.in  SPhi.in  SinxAl26.in  SinxBe10.in  SinxC14.in  SinxHe3T.in  SinxNe21.in  SipxAl26.in  SipxBe10.in  SipxC14.in  SipxHe3T.in  SipxNe21.in  (+9 more)
Modelscarp_Inversion/results/: 0_results.txt  Plot_1_invidiual_plot.sh  Plot_2_merge_all.sh  Plot_3_grid.sh  Plot_4_histogram.sh  lib_gmt.sh  parameters.nml
Modelscarp_Inversion/src/: Modelscarp_Inv.f90  Modelscarp_Inv_mpi.f90
Modelscarp_Inversion/src/modelscarp/: Ss_function.f  aicc.f  clcoll.f  clrock.f  d_function.f  d_function_2.f  fitexp.f  fn.f  forward.f  nelmin.f  scdepth.f  scrock.f  scsurf.f  sd_function.f
Modelscarp_Inversion/src/shared/: LSD.f90  (+6 more)
(+239 files in other folders)
